[project]
name = "daily-movers-agent"
version = "0.0.1"
description = "daily-movers-agent"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "uipath-langchain>=0.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "langchain-community>=0.3.0",
    "yfinance>=0.2.0",
]
requires-python = ">=3.11"

[tool.setuptools]
py-modules = ["state", "agents", "output", "tools", "main", "scraper"]
